# what-i-ate

./: README.md  pyproject.toml
app/: __init__.py  main.py
tests/: __init__.py  test_main.py
